# SEC26Mirror

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.init-bootstrap  FREERTOSINTEGRATION.md  LICENSE  PROJECT_STATUS.md  README.md  SYSTEM_OVERVIEW.md  directive.txt  docker-compose.ci.yml  docker-compose.yml  output.txt  plan.md  platformio.ini  project_status.md  tmp_sep_calc.py
ros2_ws/src/UWB_GITHUB/uwb_simulation-0b7eac2260522e323db02d07050decf78e14d0d8/: CMakeLists.txt  package.xml
ros2_ws/src/build_robot_world/: CMakeLists.txt  package.xml
ros2_ws/src/build_robot_world/controllers/: ros2_control.yaml
ros2_ws/src/build_robot_world/launch/: beacons.launch.py  gazebo_world.launch.py
ros2_ws/src/build_robot_world/scripts/: run_robot.sh
ros2_ws/src/build_robot_world/urdf/: secbot.urdf.xacro
ros2_ws/src/secbot_autonomy/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/secbot_autonomy/config/: mission_waypoints.yaml  tasks.yaml  tasks_sim.yaml
ros2_ws/src/secbot_autonomy/launch/: autonomy.launch.py  mission.launch.py  mission_no_button.launch.py
ros2_ws/src/secbot_autonomy/src/: antenna_align.cpp  antenna_align.h  autonomy_node.cpp  button_press.cpp  button_press.h  crank_turn.cpp  crank_turn.h  crater_entry.cpp  drive_primitives.cpp  drive_primitives.h  drive_test_node.cpp  flag_plant.cpp  keypad_enter.cpp  mission_node.cpp  mission_sequencer.cpp  pressure_clear.cpp  pressure_clear.h  score_tracker.cpp  state_machine.cpp  task_antenna.cpp  task_base.cpp  task_flag.cpp
ros2_ws/src/secbot_deploy/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/secbot_deploy/launch/: deploy.launch.py
ros2_ws/src/secbot_deploy/src/: deploy_node.cpp
ros2_ws/src/secbot_drive_tests/: CMakeLists.txt  package.xml
ros2_ws/src/secbot_drive_tests/launch/: drive_tests.launch.py
ros2_ws/src/secbot_drive_tests/src/: test_goal.cpp  test_harness.cpp  test_stress.cpp  test_trajectory.cpp  test_velocity.cpp
ros2_ws/src/secbot_drone_teleop/: CMakeLists.txt  package.xml
ros2_ws/src/secbot_drone_teleop/scripts/: drone_pid_tuner.py  gui_for_pid.py
ros2_ws/src/secbot_drone_teleop/src/: drone_teleop_node.cpp
ros2_ws/src/secbot_fusion/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/secbot_fusion/config/: ekf.yaml  ekf_map.yaml  fusion.yaml  fusion_sim.yaml
ros2_ws/src/secbot_fusion/launch/: fusion.launch.py  sim_fusion.launch.py
ros2_ws/src/secbot_fusion/src/: ekf.cpp  fusion_node.cpp  odom_fuser.cpp  sim_sensor_mux.cpp  tf_broadcaster.cpp
ros2_ws/src/secbot_health/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/secbot_health/launch/: health.launch.py  sim_health.launch.py
ros2_ws/src/secbot_health/src/: health_node.cpp
ros2_ws/src/secbot_jh_test/: CMakeLists.txt  field_plus_robot.sh  first_drone_launch.sh  jh.sh  keystroke-publish.sh  keystroke-subscribe.sh  keystroke-translator.sh  package.xml  prereq.sh  test_publisher.sh  test_subscriber.sh
ros2_ws/src/secbot_jh_test/config/: anchors.yaml  ros-gz-bridge.yaml
ros2_ws/src/secbot_jh_test/include/: keystroke-translator-gazebo.hpp  keystroke_listener.hpp  keystroke_node.hpp  listener_node.hpp  talk_node_.hpp  testing-tag-uwb-node.hpp  uwb-test.hpp
ros2_ws/src/secbot_jh_test/launch/: anchor-launch.py  field_plus_robot.py  first-test-drone-simple.py  first_launch.py  testing_publisher.py  testing_subscriber.py
ros2_ws/src/secbot_jh_test/src/: keystroke-translator-gazebo.cpp  keystroke_listener.cpp  keystroke_node.cpp  listener_node.cpp  talk_node.cpp  uwb-test.cpp
ros2_ws/src/secbot_jh_test/worlds/: Drone.urdf  Drone_Copy.urdf  beacon1.sdf  beacon2.sdf  cf2x.urdf  empty_world.sdf  tag.sdf
ros2_ws/src/secbot_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/secbot_msgs/action/: ApproachTarget.action  NavigatePath.action  ReadBeaconColor.action
ros2_ws/src/secbot_msgs/msg/: AntennaDetection.msg  AntennaDetections.msg  AntennaMarker.msg  ArmCommand.msg  ColorTunning.msg  DriveCommand.msg  DuckDetection.msg  IRCommand.msg  ImuLite.msg  LedColor.msg  Odom2D.msg  Pose2D.msg  RangeArray.msg  TaskStatus.msg
ros2_ws/src/secbot_msgs/srv/: SetTask.srv  StartStop.srv
ros2_ws/src/secbot_navigation/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/secbot_navigation/config/: arena_layout.yaml  nav.yaml  nav_sim.yaml
ros2_ws/src/secbot_navigation/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/secbot_navigation/launch/: nav.launch.py  navigation.launch.py  sim_nav.launch.py
ros2_ws/src/secbot_navigation/src/: dstar_lite.cpp  grid_map.cpp  path_smoother.cpp  pathing_node.cpp  trajectory.cpp
ros2_ws/src/secbot_navigation/test/: test_dstar.cpp
ros2_ws/src/secbot_sim/: CMakeLists.txt  CONFIG_VERIFICATION.md  CONTROL_ANALYSIS.md  README.md  package.xml
ros2_ws/src/secbot_sim/controllers/: ros2_control.yaml
ros2_ws/src/secbot_sim/gazebo/: secbot.gazebo
ros2_ws/src/secbot_sim/launch/: mcu_sim.launch.py  mcu_sim_draw.launch.py  mcu_sim_secbot.launch.py  sensor_calib.launch.py  sim.launch.py  sim_autonomy_secbot.launch.py  sim_only.launch.py  sim_viz.launch.py  sim_viz_draw.launch.py  sim_viz_draw_secbot.launch.py  sim_viz_secbot.launch.py  sim_world_only.launch.py  static_goal_test.launch.py  uwb_sim.launch.py
ros2_ws/src/secbot_sim/scripts/: convert_uwb_msgs.py  convert_vision_to_goal.py  drive_test.py  goal_diagnostic.py  motion_calibration_test.py  run_sim.sh  run_sim_secbot.sh  run_uwb_sim.sh  speed_calibration_sweep.py  square_movement_test.py  test_accuracy_policy.py  tune_robot_params.py
ros2_ws/src/secbot_sim/src/: mcu_subsystem_sim.cpp
ros2_ws/src/secbot_uwb/: CMakeLists.txt  README.md  TESTING_SUMMARY.md  package.xml  setup.py
ros2_ws/src/secbot_uwb/config/: beacons.yaml
ros2_ws/src/secbot_uwb/launch/: uwb_positioning.launch.py
ros2_ws/src/secbot_uwb/resource/: secbot_uwb
ros2_ws/src/secbot_uwb/secbot_uwb/: __init__.py  positioning_node.py
ros2_ws/src/secbot_uwb/src/: beacon_config.cpp  positioning_node.cpp  positioning_node_main.cpp
ros2_ws/src/secbot_uwb/test/: test_beacon_config.cpp  (+1 more)
(+816 files in other folders)
