<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>secbot_fusion</name>
	<version>0.0.1</version>
	<description>Sensor fusion scaffolding</description>
	<maintainer email="maintainers@example.com">SEC26</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>mcu_msgs</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
