<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>secbot_health</name>
  <version>0.0.1</version>
  <description>System health monitoring and MCU heartbeat watchdog for SEC26 competition robot</description>
  <maintainer email="maintainers@example.com">SEC26</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mcu_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>secbot_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
